Base/mautic/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mautic-server
  labels:
    app: mautic-server
spec:
  containers:
  - name: mautic-server
    image: mautic/mautic:v4
    volumeMounts:
    - name: mautic-var-storage
      mountPath: /var/www/html/var
    - name: mautic-config-storage
      mountPath: /var/www/html/app/config
  volumes:
  - name: mautic-var-storage
    persistentVolumeClaim:
      claimName: mautic-var-pvc
  - name: mautic-config-storage
    persistentVolumeClaim:
      claimName: mautic-config-pvc
