Base/mautic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mautic
spec:
  selector:
    app: mautic-deployment
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
